--- a/styles/style.css
+++ b/styles/style.css
@@ -70,7 +70,7 @@ ol {
 .title {
   margin-bottom: 26px;
   color: #fff;
-  font-family: Oswald, sans-serif;
+  font-family: 'Oswald', sans-serif;
   font-weight: 700;
   font-size: 75px;
   line-height: 94%;
@@ -84,10 +84,10 @@ ol {
 /* --- КНОПКИ --- */
 
 .button {
-  border: 1px solid #fff;
-  padding: 6px 73.5px;
+  border: 1px solid currentColor;
   color: #fff;
-  font-family: Fira Sans Condensed;
+  padding: 6px 73.5px;
+  font-family: 'Fira Sans Condensed', sans-serif;
   font-weight: 700;
   font-size: 18px;
   line-height: normal;
@@ -154,7 +154,7 @@ ol {
 .search-form__fieldset-title {
   margin-bottom: 5px;
   color: #fff;
-  font-family: Fira Sans Condensed;
+  font-family: 'Fira Sans Condensed', sans-serif;
   font-weight: 400;
   font-size: 18px;
   line-height: normal;
@@ -190,8 +190,8 @@ ol {
   border-bottom: 1px solid #fff;
   border-left: none;
   padding: 2.5px 14px 2.5px 0;
-  color: rgba(255, 255, 255, 0.7);
-  font-family: Fira Sans Condensed;
+  color: #fff;
+  font-family: 'Fira Sans Condensed', sans-serif;
   font-weight: 400;
   font-size: 18px;
   line-height: normal;
@@ -300,21 +300,32 @@ ol {
 
 .content__video-card-description-container {
   flex-grow: 1;
+  min-height: 70px;
 }
 
 .content__video-card-title {
   margin-bottom: 6px;
-  font-family: Oswald, sans-serif;
+  font-family: 'Oswald', sans-serif;
   font-weight: 700;
   font-size: 30px;
   line-height: 100%;
   text-transform: uppercase;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-inline-size: 240px;
 }
 
 .content__video-card-description {
   font-weight: 400;
   font-size: 18px;
   line-height: 16.2px;
+
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 4;
+  line-clamp: 4;
+  overflow: hidden;
 }
 
 .content__video-card-thumbnail {
@@ -323,62 +334,4 @@ ol {
   block-size: 103px;
   object-fit: cover;
   object-position: center;
-}
-
-/* --- ПРЕЛОАДЕР --- */
-
-.preloader {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  z-index: 10;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background-color: #1b1919;
-}
-
-.preloader-chasing-squares {
-  display: flex;
-  gap: 4px;
-}
-
-.preloader-chasing-squares .square {
-  inline-size: 12px;
-  block-size: 12px;
-  background-color: #fff;
-  animation: chase 1.5s infinite ease-in-out both;
-}
-
-@keyframes chase {
-  0% {
-    transform: translateX(0) rotate(0deg);
-  }
-  100% {
-    transform: translateX(100%) rotate(360deg);
-  }
-}
-
-/* --- ОШИБКИ --- */
-
-.error {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  z-index: 10;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background-color: #1b1919;
-}
-
-.error__title {
-  font-size: 30px;
-  font-family: Oswald, sans-serif;
-  font-weight: 700;
-  text-align: center;
 }
